dynamic title and description support, visibility based on cart total support

--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -10,3 +10,6 @@
 "CODE_ME10","Token is not valid."
 "CODE_ME11","Session Expired."
 "CODE_ME97","Invalid Request."
+
+"Buy now then pay it later with MISpay","Buy now then pay it later with MISpay"
+"Split your purchase into 3 interest-free payments, No late fees. sharia-compliant","Split your purchase into 3 interest-free payments, No late fees. sharia-compliant"
